--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<head>
-<title>
-Yes
-</title>
-</head>
-<body>
-No
-</body>
+<html>
+    <head>
+      <title>
+      Yes
+    </title>
+  </head>
+  <body>
+   No
+  </body>
+</html>
