--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
       <title>
       Yes
     </title>
+    <link rel=stylesheet herf="style.css">
+    <link rel=stylesheet herf="classes.css">
   </head>
   <body>
    No
