--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
       <title>
       Yes
     </title>
-    <link rel=stylesheet herf="style.css">
-    <link rel=stylesheet herf="classes.css">
+    <link rel="stylesheet" type="text/css" herf="style.css">
+    <link rel="stylesheet" type="text/css" herf="classes.css">
   </head>
   <body>
    No
