--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <title>
       Yes
     </title>
-    <link rel="stylesheet" type="text/css" herf="style.css">
+    <link rel="stylesheet" herf="style.css">
     <link rel="stylesheet" type="text/css" herf="classes.css">
   </head>
   <body>
