--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-      <header>
+      <script>
+            var Picks = ["livE","Evil"]
+            var Word = Picks[Math.floor(Math.random()*(Picks.length))]
+            Word = Word.replace(" ", "")
+             document.getElementById("head").innerHTML = Word
+      </script>
+      <header id="head">
           TEstFuckU
       </header>
   <p>No</p>
