--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <script>
             var Picks = ["livE","Evil"]
             var Word = Picks[Math.floor(Math.random()*(Picks.length))]
-             document.getElementById("head").innerHTML = Word
+             document.getElementById("head").innerHTML = "<style color: red;><h1>"Word"<h1></style>"
       </script>
   <p>No</p>
   <p>No</p>
