--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   </head>
   <body>
      
-      <header id="head">
+      <header>
+          <h1 id="Word">
           TEstFuckU
+          </h1>
       </header>
        <script>
             var Picks = ["livE","Evil"]
             var Word = Picks[Math.floor(Math.random()*(Picks.length))]
-             document.getElementById("head").innerHTML = "<style color: red;><h1>"Word"<h1></style>"
+             document.getElementById("head").innerHTML = Word
       </script>
   <p>No</p>
   <p>No</p>
