--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
      
       <header>
-          <h1 id="Word">
+          <h1 id="head">
           TEstFuckU
           </h1>
       </header>
